--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ button:hover {
     }
 }
 .container {
-    width: 60%;
+    width: 90%;
     margin: 0 auto;
 }
 .section {
@@ -62,4 +62,18 @@ h1, p {
 .text-p{
     margin-left: 10px;
 }
-
+#nr1{
+    background-image:url();
+}
+#nr2{
+    background-image:url();
+}
+#nr3{
+    background-image:url();
+}
+#nr4{
+    background-image:url();
+}
+#nr5{
+    background-image:url();
+}
