--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
     padding: 0;
     background-color: #f5f5f5;
 }
+
+
 button {
     padding: 15px 30px;
     font-size: 18px;
@@ -60,14 +62,28 @@ h1, p {
     max-width: 600px;
 }
 .text-p{
+    font-size: 40px;
     margin-left: 10px;
 }
+
+#image2-nav-style{
+    width: 150px;
+    height: 50px;
+    
+}
+
+#image-nav-style{
+    width: 150px;
+    height: 50px;
+}
+
+
 #nr1{
-    background-image:url(bilder/glassMedAlkohol.jpg);
-    /*Bildet er fra <a href="https://unsplash.com/@enginakyurt?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">engin akyurt</a> on <a href="https://unsplash.com/photos/clear-glass-beer-mug-with-beer-3ORoQEJY9LA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>*/
+    background-image: url();
     background-repeat: no-repeat;
     background-size: cover;
-    color: white;
+    
+
 }
 #nr2{
     background-image:url();
