--- a/style.css
+++ b/style.css
@@ -1,9 +1,54 @@
 
 body {
+    margin: 0%;
     font-family: Arial, sans-serif;
+    background-color: #f5f5f5;
+}
+
+main{
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;
+}
+.navbar {
+    background-color:#8EA8FF;
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 30px;
+}
+.logo{
+    width: 30%;
+    margin: auto;
+}
+
+.footer {
+    background-color: #8EA8FF;
+    color: white;
+    padding: 40px 0;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    text-align: center;
+}
+.footer-section {
+    flex: 1;
+    min-width: 200px;
+    margin: 10px;
+}
+.footer a {
+    color: #bbb;
+    text-decoration: none;
+}
+.footer a:hover {
+    color: white;
+}
+.footer-bottom {
+    text-align: center;
+    padding: 10px;
+    background-color: #7192ff;
+    color: rgb(0, 0, 0);
+    font-size: 15px;
 }
 
 
@@ -42,6 +87,7 @@ button:hover {
     margin: 0 auto;
 }
 .section {
+    margin-top: 10px ;
     min-height: 100vh;
     display: flex;
     align-items: center;
@@ -49,6 +95,10 @@ button:hover {
     opacity: 0;
     transform: translateY(50px);
     transition: opacity 1s ease-out, transform 1s ease-out;
+    color: rgba(0, 0, 0, 0.8);
+}
+#section-bottom {
+    margin-bottom: 50px ;
 }
 .section.visible {
     opacity: 1;
@@ -66,6 +116,10 @@ h1, p {
     margin-left: 10px;
 }
 
+img{
+    padding: 0px;
+}
+
 #image2-nav-style{
     width: 150px;
     height: 50px;
@@ -73,7 +127,7 @@ h1, p {
 }
 
 #image-nav-style{
-    width: 150px;
+    width: 170px;
     height: 50px;
 }
 
